# zmb-hcs

./: LICENSE  README.md  pyproject.toml
src/zmb_hcs/: BaSiC_helper_funs.py  parser_MD.py  stitching.py  viewer.py
src/zmb_hcs/hcs/: converter_wrapper.py  create_mean_projection.py  merge_labels.py  projections.py  roi_tables.py
src/zmb_hcs/hcs/faim_ipa/: converter_wrapper.py
src/zmb_hcs/hcs/faim_ipa/imagexpressZMB/: ImageXpressPlateAcquisition.py  ImageXpressWellAcquisition.py  MixedAcquisition.py  SinglePlaneAcquisition.py  SinglePlaneAcquisition_as3D.py  StackAcquisition.py
src/zmb_hcs/hcs/fractal/: calculate_percentiles.py  cellpose_segmentation.py  expand_segmentations.py  measure_features.py  projections.py  pyramids.py  segment_particles.py  zarr_helper_functions.py
src/zmb_hcs/hcs/fractal/illuminationCorrection/: apply_basicpy_illumination_model.py  calculate_illumination_profiles.py
src/zmb_hcs/hcs/illuminationCorrection/: apply_basicpy_illumination_model.py
src/zmb_hcs/hcs/imagexpressZMB/: ImageXpressPlateAcquisition.py  ImageXpressWellAcquisition.py  MixedAcquisition.py  SinglePlaneAcquisition.py  SinglePlaneAcquisition_as3D.py  StackAcquisition.py
