[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zmb-hcs"
version = "0.0.1"
authors = [
  { name="Flurin Sturzenegger", email="st.flurin@gmail.com" },
]
description = "A set of functions to process MD-ImageXpress data."
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "dask",
    "tifffile",
    "matplotlib",
    "m2stitch",
    "ome_types",
    "zarr",
    "ome_zarr",
    "aicsimageio",
    "aicspylibczi>=3.1.1",
    "fsspec>=2022.8.0"
]

[project.urls]
"Homepage" = "not_available_yet"
